# amugame

./: CMakeLists.txt
include/: button.h  text_button.h  triangle.h
include/amugame/input/: input_manager.h
include/amugame/render/: triangle.h
include/amugame/ui/: label.h  text_button.h
src/: button.cpp  label.cpp  main.cpp  text_button.cpp  triangle.cpp
src/input/: input_manager.cpp
src/render/: triangle.cpp
src/ui/: button.cpp  label.cpp  text_button.cpp
